# ADHS-Termin-Agent

./: .env.example  .gitignore  README.md  coding_practices.md  main.py  pyproject.toml
adhs_termin_agent/: ai_client.py  doctor_search.py  intake_form.py  patient.py  rest.py  telefonassistent.py
adhs_termin_agent/mail/: doctor_filter.py  filtered_doctors.json  mail_composer.py  mailman.py  output.json
adhs_termin_agent/retell/: call_helper.py  doctor_call_filter.py
doc-bot/: package-lock.json  package.json
doc-bot/app/: constants.ts  layout.tsx  page.tsx
doc-bot/components/: doctor-appointment.tsx  qr-code-dialog.tsx
doc-bot/components/doctor-appointment/: step1-location-specialty.tsx  step2-patient-info.tsx  step3-doctor-selection.tsx  step4-email-compose.tsx  step5-confirmation.tsx  step6-call-doctors.tsx  step7-ai-call.tsx
doc-bot/contexts/: DoctorAppointmentContext.tsx
doc-bot/utils/: device-detection.ts  doctor-appointment-utils.ts  location-helper.ts
retell/example_backend/: index.js
retell/frontend_demo/: package.json
retell/frontend_demo/src/: App.tsx
tests/: test_doctor_call_filter.py  test_doctor_search.py  test_intake_form.py
