[tool.poetry]
name = "adhs-termin-agent"
version = "0.1.0"
description = ""
authors = ["jhuss <jacques.huss@andrena.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.1"
langchain-openai = "^0.2.1"
langsmith = "^0.1.129"
pandas = "^2.2.3"
langchain-experimental = "^0.3.2"
matplotlib = "^3.9.2"
langgraph = "^0.2.28"
langchain-core = "^0.3.6"
aleph-alpha-client = "^7.3.0"
langchain-community = "^0.3.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
