[tool.poetry]
name = "adhs-termin-agent"
version = "0.1.0"
description = ""
authors = ["jhuss <jacques.huss@andrena.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
retell = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
