[tool.poetry]
name = "adhs-termin-agent"
version = "0.1.0"
description = ""
authors = ["jhuss <jacques.huss@andrena.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
retell = "^0.5.1"
retell-sdk = "^4.6.0"
flask = "^3.0.3"
langchain-community = "^0.3.1"
openai = "^1.50.2"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
